<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Projet contact</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Paramètres</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_refresh">Rafraichir</string>
    <string name="menu_help">Aide</string>
    <string name="menu_about">A propos</string>
    <string name="title_activity_new_contact">NewContactActivity</string>
    <string name="action_settings">Settings</string>
    <string name="profil">Profil</string>
    <string name="see">Voir le contact</string>
    <string name="call">Appeller le contact</string>
    <string name="text">Envoyer un SMS</string>
    <string name="supp">Supprimer le contact</string>
    <string name="titre_alertdialog_confirm">Voulez vous supprimer le contact?</string>
    <string name="bouton_alertdialog_ok">Oui</string>
    <string name="bouton_alertdialog_annuler">Non</string>
    <string name="titre_err">Les champs nom et téléphone sont obligatoires</string>
    <string name="bouton_recommencer">Recommencer</string>

</resources>